@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Basic settings for map cache directory, and associated dialog.
+ utils/cre/cre.{cpp,pro} CRESettings.{cpp,h} CRESettingsDialog.{cpp,h}
+Nicolas Weeger 2010-03-14
+
 Add relevant debug flags to compilation.
  utils/cre/.qmake.cache
 Nicolas Weeger 2010-03-14
